# eda-studio

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: dev-notes.md  eda-studio-design.md
docs/superpowers/plans/: 2026-07-19-eda-studio.md  2026-07-19-opensource-readiness.md  2026-07-21-composite-judge-migration.md  2026-07-21-refactor-design.md  2026-07-21-session-isolation.md  2026-07-21-token-usage-display.md
docs/superpowers/specs/: 2026-07-19-opensource-readiness-design.md  2026-07-19-visibility-ui-workflow-design.md  2026-07-21-composite-judge-migration-design.md  2026-07-21-refactor-design.md  2026-07-21-session-isolation-design.md  2026-07-21-token-usage-display-design.md
eda_studio/: __init__.py  __main__.py  budget.py  cli.py  cli_commands.py  config.py  design_config.py  hooks.py  judge.py  main.py  plugin.py  prompts.py  rules.py  server.py  shell_safety.py  state.py  webui_nicegui.py  workflow.py
eda_studio/executors/: __init__.py  base.py  drc.py  gds.py  pnr.py  render.py  simulate.py  synthesize.py
eda_studio/templates/i2c/: design.yaml  requirement.md
eda_studio/templates/i2c/rtl/: tb_i2c.v
eda_studio/templates/uart/: design.yaml  requirement.md
eda_studio/templates/uart/rtl/: tb_uart.v
eda_studio/tools/: __init__.py  file_tools.py  report_tools.py
scripts/: install-senza-dev.sh  uninstall-senza-dev.sh
static/: index.html
tests/: test_cli.py  test_cli_commands.py  test_config.py  test_executors.py  test_hooks.py  test_hooks_rules_budget.py  test_judge.py  test_prompts.py  test_run_shell.py  test_run_summary.py  test_state.py  test_tools.py  test_workflow.py
