[project]
name = "eda-studio"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "senza-sdk>=0.4.3",
    "pyyaml>=6.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "websockets>=12.0",
]

[project.scripts]
eda-studio = "eda_studio.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["eda_studio", "eda_studio.tools", "eda_studio.executors"]
