[project]
name = "eda-studio"
version = "0.1.0"
description = "基于 Senza SDK 的开源 EDA 自动化芯片设计流程示例"
license = {text = "MIT"}
authors = [{name = "oh-my-harness"}]
requires-python = ">=3.9"
dependencies = [
    "senza-sdk>=0.4.6",
    "pyyaml>=6.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "websockets>=12.0",
]

[project.scripts]
eda-studio = "eda_studio.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
[tool.setuptools]
packages = ["eda_studio", "eda_studio.tools", "eda_studio.executors", "eda_studio.templates"]
include-package-data = true
